maintainIT2/src/objects/Equipment__c.object
<CustomObject>
    <description>The Equipment object is used for all assets to include Vehicles, Equipment, Locations, and Components</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Account - Used to track the ownership of assignment of an Asset Tag</description>
        <inlineHelpText>Account - Used to track an Asset to an Account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Asset Tags (Account)</relationshipLabel>
        <relationshipName>Maintenance_Assets_Acct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AssetRecordType__c</fullName>
        <description>DO NOT EDIT THIS PICKLIST.  System populated via workflow.  Field security should be set to read only for all user profiles.  If you configure additional Recordtypes on the Asset Tag object, enter the Name of the recordtype as a value in this picklist, set as the only available and default value for the recordtype.  This will enable you to configure validation rules and other platform features not otherwise available on a recordtype.</description>
        <inlineHelpText>Asset Record Type - DO NOT EDIT THIS PICKLIST.  System populated via workflow.  Field security should be set to read only for all user profiles.</inlineHelpText>
        <label>Asset RecordType</label>
        <picklist>
            <picklistValues>
                <fullName>Component</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asset_Class__c</fullName>
        <description>Asset Class used in Class/SubClass for categorization - User Defined</description>
        <inlineHelpText>Asset Class used in Class/SubClass for categorization - User Defined</inlineHelpText>
        <label>Asset Class</label>
        <picklist>
            <picklistValues>
                <fullName>Agitator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Conditioner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Dryer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water System</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asset_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asset Group</description>
        <inlineHelpText>Asset Group</inlineHelpText>
        <label>Asset Group</label>
        <referenceTo>Maintenance_Group__c</referenceTo>
        <relationshipLabel>Asset Tags</relationshipLabel>
        <relationshipName>Asset_Tags</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset_Number__c</fullName>
        <description>Asset Number - System Generated Unique Number for each Maintenance Asset Record.  Can be used in conjunction with Auto Asset ID Numbering</description>
        <displayFormat>{000000}</displayFormat>
        <inlineHelpText>Asset Number - System Generated Unique Number for each Maintenance Asset Record.  Can be used in conjunction with Auto Asset ID Numbering</inlineHelpText>
        <label>Asset Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Asset_Priority__c</fullName>
        <description>Asset Priority - User Defined</description>
        <inlineHelpText>Asset Priority - User Defined</inlineHelpText>
        <label>Asset Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asset_SubClass__c</fullName>
        <description>Dependent Picklist Asset SubClass in Class/SubClass categorization - User Defined.  SubClass Values controlled by Class Values</description>
        <inlineHelpText>Dependent Picklist Asset SubClass in Class/SubClass categorization - User Defined.  SubClass Values controlled by Class Values</inlineHelpText>
        <label>Asset SubClass</label>
        <picklist>
            <controllingField>Asset_Class__c</controllingField>
            <picklistValues>
                <fullName>Sub Class 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motorcycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lift Station</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storm Water Drain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manhole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freon</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City field for Asset Tag Address</description>
        <inlineHelpText>City Address</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country field for Asset Tag Address</description>
        <inlineHelpText>Country Address</inlineHelpText>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dept__c</fullName>
        <description>Asset Tag Department - User Defined</description>
        <inlineHelpText>Department</inlineHelpText>
        <label>Dept</label>
        <picklist>
            <picklistValues>
                <fullName>Dept A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Dept B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dept C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dept 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dept 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dept 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of Asset - User Defined</description>
        <inlineHelpText>Description of Asset - User Defined</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doors__c</fullName>
        <description>Number of Doors for Vehicle - User Defined</description>
        <inlineHelpText>Number of Doors</inlineHelpText>
        <label>Number of Doors</label>
        <picklist>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Engine__c</fullName>
        <description>Engine Information for a Vehicle Asset Tag type.  User Defined</description>
        <inlineHelpText>Engine</inlineHelpText>
        <label>Engine</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Asset_ID__c</fullName>
        <description>Unique External ID which can be used to access the Asset Tag record thru the API</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique External ID which can be used to access the Maintenance Asset record thru the API</inlineHelpText>
        <label>External Asset ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fuel_Type__c</fullName>
        <description>Fuel Type - User Defined</description>
        <inlineHelpText>Fuel Type</inlineHelpText>
        <label>Fuel Type</label>
        <picklist>
            <picklistValues>
                <fullName>Gasoline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diesel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flex Fuel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid-Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gross_Vehicle_Weight__c</fullName>
        <description>Gross Vehicle Weight (GVW) - User Defined</description>
        <inlineHelpText>Gross Vehicle Weight (GVW)</inlineHelpText>
        <label>Gross Vehicle Weight</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Display__c</fullName>
        <description>Field Displayed on the Asset Hierarchy.  Can be manually edited or updated with Field Update Workflows capturing values from other fields thereby enabling the display text to be customer specific.</description>
        <inlineHelpText>Field Displayed on the Asset Hierarchy.  Can be written to with Field Update Workflows capturing values from other fields thereby enabling the display test to be customer specific.</inlineHelpText>
        <label>Hierarchy Display</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Sort_Order__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Controls the sort order for an asset position within a node on the Asset Hierarchy Visualforce page.</description>
        <inlineHelpText>Controls the sort order for an asset position within a node on the Asset Hierarchy Visualforce page.</inlineHelpText>
        <label>Hierarchy Sort Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ID_Description__c</fullName>
        <description>Asset ID &amp; Description (concatenated)</description>
        <formula>Name &amp; &quot;  &quot; &amp;  Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Asset ID &amp; Description (concatenated - used for easy grouping on Reports)</inlineHelpText>
        <label>ID &amp; Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Service_Date__c</fullName>
        <description>Date that Asset was placed into service - User defined</description>
        <inlineHelpText>Date that Asset was placed into service - User defined</inlineHelpText>
        <label>In Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manufacturer of Asset - Lookup to Accounts where &quot;Manufacturer&quot; flag is checked</description>
        <inlineHelpText>Manufacturer of Asset - Lookup to Accounts where &quot;Manufacturer&quot; flag is checked</inlineHelpText>
        <label>Manufacturer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Manufacturer__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Asset Tags (Manufacturer)</relationshipLabel>
        <relationshipName>Maintenance_Assets_Mfg</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mfg_Date__c</fullName>
        <description>Date the Asset was manufactured - User Defined</description>
        <inlineHelpText>Date the Asset was manufactured - User Defined</inlineHelpText>
        <label>Mfg Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mfg_Year__c</fullName>
        <description>Manufacturer Year</description>
        <inlineHelpText>Manufacturer Year</inlineHelpText>
        <label>Mfg Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Number__c</fullName>
        <description>Asset Model Number - User Defined</description>
        <inlineHelpText>Asset Model Number - User Defined</inlineHelpText>
        <label>Model Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nameplate_Data__c</fullName>
        <description>Nameplate Data.  Multi-Line Text Field - User Defined</description>
        <inlineHelpText>Nameplate Data.  Multi-Line Text Field - User Defined</inlineHelpText>
        <label>Nameplate Data</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <description>Purchase Order Number Relating to Asset Purchase - User Defined</description>
        <inlineHelpText>Purchase Order Number Relating to Asset Purchase - User Defined</inlineHelpText>
        <label>PO Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Description__c</fullName>
        <description>Formula referencing the Parent Asset Description</description>
        <formula>Parent__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula referencing the Parent Asset Description</inlineHelpText>
        <label>Parent Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Asset Tag in the physical/logical parent-child heirarchy</description>
        <inlineHelpText>Parent in the physical/logical parent-child heirarchy</inlineHelpText>
        <label>Parent Asset ID</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>Child Asset Tags</relationshipLabel>
        <relationshipName>Children</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parts_Expense_Account__c</fullName>
        <description>Parts Expense Account - User Defined</description>
        <inlineHelpText>Parts Expense Account</inlineHelpText>
        <label>Parts Expense Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passenger_Seats__c</fullName>
        <description>Number of Passenger Seats for Vehicle - User Defined</description>
        <inlineHelpText>Number of Passenger Seats</inlineHelpText>
        <label>Number of Passenger Seats</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <description>Asset Purchase Date - User Defined</description>
        <inlineHelpText>Asset Purchase Date - User Defined</inlineHelpText>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <description>Asset Tag Serial Number - User Defined</description>
        <inlineHelpText>Asset Serial Number - User Defined</inlineHelpText>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Location__c</fullName>
        <description>Service Location serves as a physical location of an Asset Tag.  This can be used in a complementary fashion with a &quot;Location&quot; which is a Maintenance Asset Record Type</description>
        <inlineHelpText>Service Location Serves as a Physical Location to identify where a Maintenance Asset is Located.  This can be used in a complementary fashion with a &quot;Functional Location&quot; which is a Maintenance Asset Record Type</inlineHelpText>
        <label>Service Location</label>
        <picklist>
            <picklistValues>
                <fullName>Site 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <description>State/Province for Asset Tag Address - User Defined</description>
        <inlineHelpText>State/Province Address</inlineHelpText>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Describes the status of the asset in its lifecycle - User Defined (Do not remove &quot;Disposed&quot; status).</description>
        <inlineHelpText>Describes the status of the asset in its lifecycle - User Defined</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>CIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Service</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Idle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disposed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Transit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>Street Address for Asset Tag</description>
        <inlineHelpText>Street Address</inlineHelpText>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Top_Level__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Optional Attribute that can be used to define an asset as being the top level of a hierarchy.  Does not keep you from adding children to the asset.</description>
        <inlineHelpText>Optional Attribute that can be used to define an asset as being the top level of a hierarchy.  Does not keep you from adding children to the asset.</inlineHelpText>
        <label>Top Level</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transmission__c</fullName>
        <description>Transmission Type for Vehicle - User Defined</description>
        <inlineHelpText>Transmission Type</inlineHelpText>
        <label>Transmission</label>
        <picklist>
            <picklistValues>
                <fullName>Automatic 3 Speed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automatic 4 Speed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual 3 Speed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual 4 Speed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual 5 Speed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual 6 Speed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Asset Type is for categorization purposes - User Defined</description>
        <inlineHelpText>Asset Type is for categorization purposes - User Defined</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Furnishings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT/Computing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instrumentation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <description>Seventeen digits in total.  The first three digits (1, 2, 3) indicating the World Manufacturer Identifier or the company which made the car. The next six (4, 5, 6, 7, 8, 9) digits indicate the vehicle characteristics or CarsDirect description. The next number (10) indicates the Model year of the car you have chosen. The next number (11) indicates the plant code where the car was made. The 12th, 13th and 14th number indicates the manufacturer identifier, and 15th, 16th and 17th number indicating the sequential numbers</description>
        <inlineHelpText>Vehicle Identification Number</inlineHelpText>
        <label>VIN</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Expiration_Date__c</fullName>
        <description>Warranty Expiration Date - User Defined</description>
        <inlineHelpText>Warranty Expiration Date - User Defined</inlineHelpText>
        <label>Warranty Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warranty__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates if a Warranty applies to an Asset - User Defined</description>
        <inlineHelpText>Designates if a Warranty applies to an Asset - User Defined</inlineHelpText>
        <label>Warranty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wheel_Drive__c</fullName>
        <description>Wheel Drive</description>
        <inlineHelpText>Wheel Drive</inlineHelpText>
        <label>Wheel Drive</label>
        <picklist>
            <picklistValues>
                <fullName>FWD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RWD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AWD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4WD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <description>Zip/Postal Code Address</description>
        <inlineHelpText>Zip/Postal Code Address</inlineHelpText>
        <label>Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Asset Tag</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Components</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>Parent__c</columns>
        <columns>Parent_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Equipment__c.Component</value>
        </filters>
        <label>All Components</label>
    </listViews>
    <listViews>
        <fullName>All_Equipment</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>Parent__c</columns>
        <columns>Parent_Description__c</columns>
        <columns>Latitude__c</columns>
        <columns>Longitude__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Equipment__c.Equipment</value>
        </filters>
        <label>All Equipment</label>
    </listViews>
    <listViews>
        <fullName>All_Locations</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>Parent__c</columns>
        <columns>Parent_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Equipment__c.Location</value>
        </filters>
        <label>All Locations</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Records</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>Parent__c</columns>
        <columns>Parent_Description__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Warranty__c</columns>
        <columns>Warranty_Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <listViews>
        <fullName>Top_Level_Locations</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>Parent__c</columns>
        <columns>Parent_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Equipment__c.Location</value>
        </filters>
        <filters>
            <field>Top_Level__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Top Level Locations</label>
    </listViews>
    <listViews>
        <fullName>Vehicles</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>VIN__c</columns>
        <columns>Warranty_Expiration_Date__c</columns>
        <columns>Manufacturer__c</columns>
        <columns>Status__c</columns>
        <columns>Model_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Equipment__c.Vehicle</value>
        </filters>
        <label>Vehicles</label>
    </listViews>
    <nameField>
        <label>Asset ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Tags</pluralLabel>
    <recordTypes>
        <fullName>Building</fullName>
        <active>true</active>
        <description>Building</description>
        <label>Building</label>
    </recordTypes>
    <recordTypes>
        <fullName>Component</fullName>
        <active>true</active>
        <description>Component</description>
        <label>Component</label>
    </recordTypes>
    <recordTypes>
        <fullName>Equipment</fullName>
        <active>true</active>
        <description>Equipment</description>
        <label>Equipment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Location</fullName>
        <active>true</active>
        <description>Location</description>
        <label>Location</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vehicle</fullName>
        <active>true</active>
        <description>Vehicle</description>
        <label>Vehicle</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>